# ice-cream-calculator

./: README.md  app.py  constraints.py  ingredients.py  main.py  ploomber-cloud.json  pyproject.toml  recipe.py  requirements.txt
ingredients/: __init__.py  additives.py  base.py  colorants.py  dairy.py  dairy_alternatives.py  emulsifiers.py  fats_and_oils.py  flavorings.py  liquids.py  melting_rate_modifiers.py  milks.py  pH_modifiers.py  ph_buffers.py  proteins.py  stabilizers.py  stabilizers_and_thickeners.py  sugars.py  sweeteners.py  values.py  water.py
recipes/: __init__.py  base.py  ice_cream.py
